feat(app): Some design and components fixes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ion-margin-bottom">
+  <ion-toolbar>
     <ion-row>
       <ion-thumbnail class="ion-margin-start">
         <img src="assets/icon/favicon.png" alt="">
@@ -15,5 +15,4 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-
 </ion-header>
