--- a/src/app/pages/auth-module/pages/login/login.page.html
+++ b/src/app/pages/auth-module/pages/login/login.page.html
@@ -2,10 +2,10 @@
 
 <ion-content class="ion-padding">
     <ion-row>
-        <ion-col size="6">
+        <ion-col class="ion-hide-md-down" size="6">
             <ion-img src="src/assets/olives.png" alt="Login image"></ion-img>
         </ion-col>
-        <ion-col size="6">
+        <ion-col size="12" sizeMd="6">
             <h2>Iniciar sesión</h2>
             <form [formGroup]="loginForm">
                 <ion-item>
