--- a/src/app/pages/auth-module/pages/login/login.page.html
+++ b/src/app/pages/auth-module/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<ion-content class="ion-padding">
+<ion-content>
     <ion-row>
         <ion-col class="ion-hide-md-down" size="6">
             <ion-img src="assets/olives.png" alt="Login image"></ion-img>
