feat(index): First design to index

--- a/src/app/pages/public-module/pages/index/index.page.html
+++ b/src/app/pages/public-module/pages/index/index.page.html
@@ -2,4 +2,54 @@
 
 <ion-content>
     <h1>¡Bienvenido a Olive Farming!</h1>
+
+    <ion-item>
+        <ion-grid>
+            <ion-row>
+                <ion-col size="12" sizeMd="6">
+                    <img src="assets/OliveGrove.jpg" alt="Olive grove photograph">
+                </ion-col>
+                <ion-col size="12" sizeMd="6" style="display: grid;">
+                    <div class="textBox">
+                        <div class="vertical"></div>
+                        <div>
+                            <h2>¿Qué es Olive Farming?</h2>
+                            <p>Olive Farming es una aplicación dedicada a la gestión de su olivar:</p>
+                            <ul>
+                                <li>Registro de la temporada de lluvias</li>
+                                <li>Registro de la campaña de aceitunas</li>
+                                <li>Creación del Libro de Campo</li>
+                            </ul>
+                        </div>
+                    </div>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-item>
+
+    <h1>Funcionalidades</h1>
+
+    <ion-item>
+        <ion-grid>
+            <h2 class="ion-text-center">Temporada de lluvias</h2>
+            <ion-row>
+
+                <ion-col>
+                    <ul>
+                        <li>Consulta las lluvias de la temporada agrícola</li>
+                        <li>Compara los litros entre diferentes años</li>
+                        <li>Anota nuevos registros cada vez que caigan unas gotas</li>
+                    </ul>
+
+                </ion-col>
+                <ion-col>
+                    <img src="assets/Rainbow.jpg" alt="Rain photograph">
+                </ion-col>
+            </ion-row>
+            
+            <ion-row class="ion-margin-vertical ion-justify-content-center">
+                <ion-button>Ir al puesto de mandos</ion-button>
+            </ion-row>
+        </ion-grid>
+    </ion-item>
 </ion-content>
