--- a/src/global.scss
+++ b/src/global.scss
@@ -27,4 +27,25 @@
 
 ion-button {
     color: white;
+    --border-radius: 20px;
+    --padding-top: 18px;
+    --padding-bottom: 18px;
+    --padding-start: 24px;
+    --padding-end: 24px;
+}
+
+h1 {
+    margin-left: 25px;
+}
+
+.textBox {
+    display: flex;
+    align-items: center;
+
+    .vertical {
+        border-left: 3px solid var(--ion-color-primary);
+        border-radius: 3px;
+        height: 100%;
+        margin-right: 1.75rem;
+    }
 }
