feat(dashboard): Added dashboard page

--- a/src/app/pages/public-module/pages/index/index.page.html
+++ b/src/app/pages/public-module/pages/index/index.page.html
@@ -48,7 +48,7 @@
             </ion-row>
             
             <ion-row class="ion-margin-vertical ion-justify-content-center">
-                <ion-button>Ir al puesto de mandos</ion-button>
+                <ion-button (click)="core.navigate('/private/dashboard')">Ir al puesto de mandos</ion-button>
             </ion-row>
         </ion-grid>
     </ion-item>
