--- a/src/app/pages/private-module/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/private-module/pages/dashboard/dashboard.page.html
@@ -1,3 +1,18 @@
-<p>
-  dashboard works!
-</p>
+<app-navbar></app-navbar>
+
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" sizeMd="8" class="ion-margin-top">
+        <div id="rainyCard" class="card">
+          <h1>Temporada de lluvias</h1>
+          <p>La temporada de lluvias se cuenta entre septiembre hasta agosto del año siguiente.</p>
+          <p>Actualmente, en la temporada 2022-2023, han caído un total de 200 litros.</p>
+          <div class="ion-justify-content-center">
+            <ion-button>Ver detalles</ion-button>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
