feat(rain): Created rain page

--- a/src/app/pages/private-module/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/private-module/pages/dashboard/dashboard.page.html
@@ -9,7 +9,7 @@
           <p>La temporada de lluvias se cuenta entre septiembre hasta agosto del año siguiente.</p>
           <p>Actualmente, en la temporada 2022-2023, han caído un total de 200 litros.</p>
           <div class="ion-justify-content-center">
-            <ion-button>Ver detalles</ion-button>
+            <ion-button (click)="core.navigate('/private/rain')">Ver detalles</ion-button>
           </div>
         </div>
       </ion-col>
