--- a/src/app/pages/private-module/pages/rain/rain.page.scss
+++ b/src/app/pages/private-module/pages/rain/rain.page.scss
@@ -6,8 +6,8 @@
     text-align: center;
     position: relative;
     width: 180px;
-    margin-left: 10px;
     margin-bottom: -1px;
+
     p {
         padding: 3px 8px 4px;
         margin: 0;
@@ -16,29 +16,44 @@
 }
 
 .seasonLabel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
-    display: inline-block;
     background-color: white;
     color: black;
     border-radius: 6px 6px 0px 0px;
     text-align: center;
     position: relative;
-    width: 120px;
+    min-width: 120px;
     margin-left: 1px;
     margin-bottom: -1px;
     cursor: pointer;
+    user-select: none;
+
     p {
         padding: 3px 8px 4px;
         margin: 0;
-        // font-size: 9px;
     }
 }
+
 
 .selectedTab {
     background-color: var(--ion-color-secondary);
 }
 
 .tabs {
-    overflow-x: auto;
-    overflow-y: hidden;
+    display: flex;
+}
+
+@media screen and (max-width: 600px) {
+    .seasonLabel {
+        min-width: 60px;
+    }
+
+    .tabs {
+        overflow-x: scroll;
+        overflow-y: hidden;
+        overscroll-behavior-x: contain;
+    }
 }
