feat(rain): First functionality to rain manage

--- a/src/app/pages/private-module/pages/rain/rain.page.html
+++ b/src/app/pages/private-module/pages/rain/rain.page.html
@@ -20,27 +20,73 @@
         </span> -->
     </div>
     <ion-item color="secondary">
-
         <ion-grid>
-            <h2>Nuevo registro de lluvia:</h2>
-            <ion-row>
-                <ion-col size="12" sizeSm="6">
-                    <ion-input type="number" [value]="liters" label="Cantidad de litros" labelPlacement="floating"
-                        placeholder="00"></ion-input>
-                </ion-col>
-                <ion-col size="12" sizeSm="6">
-                    <ion-input id="datePopover" [value]="rainDate" type="text" label="Fecha" labelPlacement="floating"
-                        readonly></ion-input>
-                    <ion-popover trigger="datePopover">
-                        <ng-template>
-                            <ion-datetime (ionChange)="changeDate($event)"></ion-datetime>
-                        </ng-template>
-                    </ion-popover>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <ion-button [disabled]="!rainDate && !liters" (click)="saveRainLog()">Guardar</ion-button>
+            <ng-container *ngIf="!showNewRainLogForm && rainSeasons[selectedTab]">
+                <ion-row>
+                    <ion-col class="center">
+                        <ion-button class="btn" (click)="showNewRainLogForm = true">
+                            Añadir nuevo registro de lluvia
+                        </ion-button>
+                    </ion-col>
+                </ion-row>
+            </ng-container>
+            <ng-container *ngIf="showNewRainLogForm || !rainSeasons[selectedTab]">
+                <h2>Nuevo registro de lluvia:</h2>
+                <ion-row>
+                    <ion-col size="12" sizeSm="6">
+                        <ion-input type="number" [(ngModel)]="liters" label="Cantidad de litros" labelPlacement="floating"
+                            placeholder="00"></ion-input>
+                    </ion-col>
+                    <ion-col size="12" sizeSm="6">
+                        <ion-input id="datePopover" [value]="rainDate | date" type="text" label="Fecha"
+                            labelPlacement="floating" readonly></ion-input>
+                        <ion-popover trigger="datePopover">
+                            <ng-template>
+                                <ion-datetime (ionChange)="changeDate($event)"></ion-datetime>
+                            </ng-template>
+                        </ion-popover>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col class="evenly">
+                        <ion-button class="btn" [disabled]="!rainDate && !liters"
+                            (click)="saveRainLog()">Guardar</ion-button>
+                        <ng-container *ngIf="rainSeasons[selectedTab]">
+                            <ion-button color="danger" class="btn" (click)="showNewRainLogForm = false">
+                                Cancelar
+                            </ion-button>
+                        </ng-container>
+                    </ion-col>
+                </ion-row>
+            </ng-container>
+
+
+            <ion-row class="ion-margin-vertical">
+                <table id="rainTable" *ngIf="rainSeasons[selectedTab]">
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Litros</th>
+                        <th>Acciones</th>
+                    </tr>
+                    <tr *ngFor="let rainLog of rainSeasons[selectedTab]">
+                        <td>{{rainLog.date | date}}</td>
+                        <td class="ion-text-center">{{rainLog.liters}}</td>
+                        <td>
+                            <div class="center">
+                                <ion-button>
+                                    <ion-icon name="create-outline"></ion-icon>
+                                </ion-button>
+                                <ion-button color="danger" (click)="deleteRainLog(rainLog._id)">
+                                    <ion-icon name="trash-outline"></ion-icon>
+                                </ion-button>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <ion-col *ngIf="!rainSeasons[selectedTab]">
+                    <div class="ion-text-center">
+                        <h3>Aún no hay registros de lluvia en esta temporada.</h3>
+                    </div>
                 </ion-col>
             </ion-row>
         </ion-grid>
