--- a/src/app/pages/private-module/pages/rain/rain.page.scss
+++ b/src/app/pages/private-module/pages/rain/rain.page.scss
@@ -67,8 +67,44 @@ ion-input {
         div {
             padding-left: 15px;
         }
+
         .native-wrapper {
             padding-left: 25px;
         }
     }
+}
+
+
+#rainTable {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    color: #000;
+    border-radius: 10px;
+}
+
+#rainTable td,
+#rainTable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    width: 200px;
+}
+
+#rainTable tr {
+    background-color: white;
+}
+
+#rainTable tr:nth-child(even) {
+    background-color: #eeeeee;
+}
+
+#rainTable tr:hover {
+    background-color: #ddd;
+}
+
+#rainTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: var(--ion-color-primary);
+    color: white;
 }
