feat(rain): Added animations to rain table

--- a/src/app/pages/private-module/pages/rain/rain.page.scss
+++ b/src/app/pages/private-module/pages/rain/rain.page.scss
@@ -108,3 +108,35 @@ ion-input {
     background-color: var(--ion-color-primary);
     color: white;
 }
+
+.appearTr {
+    animation: appearTr 2s;
+}
+
+@keyframes appearTr {
+    from {
+        opacity: 0;
+        transform: translateX(-550px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.disappearTr {
+    animation: disappearTr 2s;
+}
+
+@keyframes disappearTr {
+    from {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+    to {
+        opacity: 0;
+        transform: translateX(-550px);
+    }
+}
