--- a/src/app/pages/private-module/pages/rain/rain.page.html
+++ b/src/app/pages/private-module/pages/rain/rain.page.html
@@ -10,7 +10,8 @@
             <p>{{selectedTab}}</p>
         </span>
         <ng-container *ngFor="let season of core.season.seasons">
-            <span *ngIf="selectedTab !== season" (click)="selectedTab = season" class="seasonLabel">
+            <span *ngIf="selectedTab !== season" class="seasonLabel"
+                (click)="selectedTab = season; rainSeasons[season] ? '' : updateSeason(season, false)">
                 <p>{{season}}</p>
             </span>
         </ng-container>
@@ -34,8 +35,8 @@
                 <h2>Nuevo registro de lluvia:</h2>
                 <ion-row>
                     <ion-col size="12" sizeSm="6">
-                        <ion-input type="number" [(ngModel)]="liters" label="Cantidad de litros" labelPlacement="floating"
-                            placeholder="00"></ion-input>
+                        <ion-input type="number" [(ngModel)]="liters" label="Cantidad de litros"
+                            labelPlacement="floating" placeholder="00"></ion-input>
                     </ion-col>
                     <ion-col size="12" sizeSm="6">
                         <ion-input id="datePopover" [value]="rainDate | date" type="text" label="Fecha"
@@ -49,7 +50,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col class="evenly">
-                        <ion-button class="btn" [disabled]="!rainDate && !liters"
+                        <ion-button class="btn" [disabled]="!rainDate || !liters"
                             (click)="saveRainLog()">Guardar</ion-button>
                         <ng-container *ngIf="rainSeasons[selectedTab]">
                             <ion-button color="danger" class="btn" (click)="showNewRainLogForm = false">
@@ -62,13 +63,14 @@
 
 
             <ion-row class="ion-margin-vertical">
-                <table id="rainTable" *ngIf="rainSeasons[selectedTab]">
+                <table id="rainTable" *ngIf="rainSeasons[selectedTab]" class="appearTr">
                     <tr>
                         <th>Fecha</th>
                         <th>Litros</th>
                         <th>Acciones</th>
                     </tr>
-                    <tr *ngFor="let rainLog of rainSeasons[selectedTab]">
+                    <tr *ngFor="let rainLog of rainSeasons[selectedTab]; let i = index" [id]="i"
+                        [class.appearTr]="newLogPosition === i">
                         <td>{{rainLog.date | date}}</td>
                         <td class="ion-text-center">{{rainLog.liters}}</td>
                         <td>
@@ -76,7 +78,7 @@
                                 <ion-button>
                                     <ion-icon name="create-outline"></ion-icon>
                                 </ion-button>
-                                <ion-button color="danger" (click)="deleteRainLog(rainLog._id)">
+                                <ion-button color="danger" (click)="deleteRainLog(rainLog._id); deleteLogPosition = i">
                                     <ion-icon name="trash-outline"></ion-icon>
                                 </ion-button>
                             </div>
