feat(rain): Getting current season liters

--- a/src/app/pages/private-module/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/private-module/pages/dashboard/dashboard.page.html
@@ -7,7 +7,9 @@
         <div id="rainyCard" class="card">
           <h1>Temporada de lluvias</h1>
           <p>La temporada de lluvias se cuenta entre septiembre hasta agosto del año siguiente.</p>
-          <p>Actualmente, en la temporada 2022-2023, han caído un total de 200 litros.</p>
+          <p>Actualmente, en la temporada 2022-2023, han caído un total de
+            {{core.season.currentSeasonLiters}} litros.
+          </p>
           <div class="ion-justify-content-center">
             <ion-button (click)="core.navigate('/private/rain')">Ver detalles</ion-button>
           </div>
