--- a/src/app/pages/private-module/pages/rain/rain.page.scss
+++ b/src/app/pages/private-module/pages/rain/rain.page.scss
@@ -109,6 +109,11 @@ ion-input {
     color: white;
 }
 
+#totalLitersRow {
+    background-color: var(--ion-color-primary) !important;
+    color: white;
+}
+
 .appearTr {
     animation: appearTr 2s;
 }
