--- a/src/app/pages/private-module/pages/rain/rain.page.html
+++ b/src/app/pages/private-module/pages/rain/rain.page.html
@@ -103,16 +103,8 @@
         </ion-grid>
     </ion-item>
 
-    <!-- <ion-item>
-        <ion-grid>
-            <ion-row>
-                <ion-col> -->
-        <div class="chart-container" *ngIf="chart">
-            <canvas id="RainChart">{{ chart }}</canvas>
-        </div>
-        <!-- </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-item> -->
+    <div class="chart-container">
+        <canvas #RainChart id="RainChart">{{ chart }}</canvas>
+    </div>
 
 </ion-content>
