feat(rain): Restyled rain chart card

--- a/src/app/pages/private-module/pages/rain/rain.page.html
+++ b/src/app/pages/private-module/pages/rain/rain.page.html
@@ -103,7 +103,7 @@
         </ion-grid>
     </ion-item>
 
-    <div id="RainChart">
+    <div id="RainChart" class="ion-margin-vertical">
         <canvas #RainChart>{{ chart }}</canvas>
     </div>
 
