--- a/src/global.scss
+++ b/src/global.scss
@@ -59,3 +59,11 @@ h1 {
     display: flex;
     justify-content: space-evenly;
 }
+
+.dBlock {
+    display: block;
+}
+
+.dNone {
+    display: none;
+}
